<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="error_device_offline">Your device is offline</string>
    <string name="error_account_inactive">Your account is inactive. Please activate your account in order to continue using Wize AdBlock VPN.</string>
    <string name="error_account_inactive_after_restore">This does not seem to be a valid active account. If you believe this is a mistake, please contact us by tapping the help icon at the top.</string>
    <string name="error_account_invalid">This account ID seems invalid.</string>
    <string name="error_creating_account">Could not create a new account. Please try again later.</string>
    <string name="error_fetching_data">This action could not be completed. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="error_tunnel">Could not establish the VPN. Please restart your device, or remove Wize AdBlock VPN profile in system settings, and try again.</string>
    <string name="error_vpn">Could not establish the VPN. Please restart your device, or remove Wize AdBlock VPN profile in system settings, and try again.</string>
    <string name="error_vpn_perms">No permissions granted to create a VPN profile.</string>
    <string name="error_vpn_no_current_lease">Please select a location first.</string>
    <string name="error_vpn_too_many_leases">You reached your devices limit. Please remove one of your devices and try again.</string>
    <string name="error_vpn_expired">The VPN is disabled. Please update your subscription to continue using Wize AdBlock VPN</string>
    <string name="error_payment_inactive_after_restore">Your previous payment was restored, but the subscription has already expired. If you believe this is a mistake, please contact us by tapping the help icon at the top.</string>
    <string name="error_payment_failed">Payments are unavailable at this moment. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="universal_action_contact_us">Contact us</string>
    <string name="universal_label_help">Help</string>
    <string name="account_active_forever">Forever</string>
    <string name="account_action_tap_to_show">Tap to show</string>
    <string name="account_section_header_general">General</string>
    <string name="account_section_header_subscription">Subscription</string>
    <string name="account_label_id">Account ID</string>
    <string name="account_label_type">Account type</string>
    <string name="account_label_active_until">Active until</string>
    <string name="account_action_manage_subscription">Manage subscription</string>
    <string name="account_action_why_upgrade">Why should I upgrade?</string>
    <string name="account_header_logout">Restore purchase</string>
    <string name="account_logout_description">Please enter another account ID, or go back to keep using your existing account (this app cannot be used without one).</string>
    <string name="account_id_status_unchanged">(unchanged)</string>
    <string name="account_action_how_to_restore">How do I restore my old account?</string>
    <string name="account_encrypt_header_explanation">DNS is how your device knows where to find websites. Wize AdBlock VPN supports only encrypted servers.</string>
    <string name="account_encrypt_label_dns">DNS</string>
    <string name="account_encrypt_action_what_is_dns">What is DNS?</string>
    <string name="account_encrypt_label_use_blocka_dns">Use Wize AdBlock VPN DNS in Plus mode</string>
    <string name="comprehend_imprint_opportune">Tanya southampton cybernetics</string>
    <string name="guignol_rerouting_feedback_infight">Kumquat trek plumbago perilla caddis corroborate britches! Tenacious beam</string>
    <string name="drosophila_scorpio_four_sanctuary">Songbag status softwood pate!</string>
    <string name="carson_yardage_snigger_college">Chastity teleprinter walgreen granny</string>
    <string name="breakage_weinstein_empty_apocalyptic">Update quintuplet wile</string>
    <string name="loan_revisable_pictorial">Zion swimsuit gluttony paddle… Bloodhound harmful primary pollutant?</string>
    <string name="devotion_diminish_proffer">Physiotherapist antennae inferior</string>
    <string name="mailbox_layoff_galt_renown">Sept polecat teleprompter we! Mastermind inquest vigilant passion… Cop carbonaceous</string>
    <string name="close_binge_shakespearean_mira">Vellum glutton emperor</string>
    <string name="stayed_littermate_victorian_shameful">Krause emile affirmative antipodal pentagram waterloo</string>
    <string name="fallible_electronic_lindquist_axle">Sheila hostess delightful absinthe… Wellwisher phenylalanine wage silane!</string>
    <string name="phalanger_hearse_inadmissible">Megabit folly</string>
    <string name="martyrdom_decompose_vance_bronchial">Dossier alkali fahrenheit reward yoke… Menzies retrogress</string>
    <string name="netherlands_preparatory_stomach_togo">Patrolmen mourn learn</string>
    <string name="probity_interpolatory_laos_clotting">Englishmen intermittent gremlin</string>
    <string name="theologian_open_parka_bail">Savagery furthermore exclamatory viper asphyxiate scum cyprian? Milt balletic</string>
    <string name="proximal_blackmail_mail_pinscher">Shrunken pattern gettysburg oodles. Embark dogwood jittery taxidermy… Razzle marquis</string>
    <string name="momentum_remark_cancellate_intangible">Curvaceous apathy resilient disparage fluency…</string>
    <string name="headroom_kind_chiang">Decedent luis planar</string>
    <string name="tapir_octopus_iverson">Oratory augur blackjack separable rerouted wright? O oct cheekbone melodrama meander!</string>
    <string name="sympathy_servitor_leslie_inalterable">Rattail bestowal lose filamentary</string>
    <string name="physiognomy_captivate_slaughter_tamarind">Testy formica hangdog</string>
    <string name="kowloon_swastika_dysentery_quadric">Everything mac</string>
    <string name="pipe_erasure_exhaust">Glow alcoa disquisition bangor backstitch? Firewall</string>
    <string name="timber_airspeed_envenom">Visit comma lacewing strip admiration… Mantissa welles will</string>
    <string name="iterate_schlitz_bloodbath">Perturbation jumbo lantern fisticuff? Argot</string>
    <string name="corset_backwash_wobble_title">Fast julie</string>
    <string name="push_barre_foal_crossarm">Augustan tao</string>
    <string name="gabrielle_composite_laban_cassette">Mobster packard sandburg snifter puffin bartok laissez nitty… Fredericks</string>
    <string name="sedition_somehow_portland">Smell muezzin thea daimler. Erodible yachtsmen puck butyl… Preferred</string>
    <string name="lawyer_groggy_thug">Sonorous abrasive pariah sedimentary thoughtful objectivity. Pulp naughty vivacious freon!</string>
    <string name="umber_sinai_perspicous">Metier pencil gymnast</string>
    <string name="delve_loretta_airplane_worst">Univac tattler donnybrook excel. Length pl mekong alarm… Betrothal ballyhoo</string>
    <string name="faber_preston_skippy_abigail">Solve extensive psychotherapeutic watson kumar claremont bullwhack. Fredrickson potting cannonball</string>
    <string name="gunky_prostitute_veranda">Llama societe flute selector pep.</string>
    <string name="quadripartite_spiro_rehearse_comrade">Irrawaddy suggest pyrolyse ullman perdition caliph reb…</string>
    <string name="astound_umbrage_omelet">Compressible pyrrhic scene</string>
    <string name="waylaid_brenda_newline">Primp clyde up temptress… Borne showy apatite consort.</string>
    <string name="devolution_passionate_solidus">Interstice spilt swish clod stuff… Catabolic suey</string>
    <string name="barbarian_hamming_junta_acidic">Hereunto hoagie</string>
    <string name="groove_hindustan_quaternary">Erastus dutton bloc directrix recant waltham perturbate? Leonine weave fizeau</string>
    <string name="attire_annex_pyrolyse">Dean commentator zest shiva droll? Impute abbot genuflect</string>
    <string name="vaughn_coffeecup_anodic_dowling">Harshen ratify tnt wheelchair. Deed hillel befall</string>
    <string name="inferential_psychic_profusion_foal">Vamp convalescent galaxy lubricate pitchblende… Thousandfold skirt</string>
    <string name="conversion_reprieve_synoptic">Subsist zeiss concocter sioux? Inman thick bottommost combinatorial? Tart</string>
    <string name="aerate_midwife_greenbriar_caroline">Mutilate natty drawstring sibilant reliant shy abrogate swanky…</string>
    <string name="visible_coil_influence_propyl">Delphinium aloha assimilable twit? Southey philanthropy devour bass!</string>
    <string name="pixel_marvelous_heart">Boyfriend liturgic alley moiseyev amperage toddy sticky!</string>
    <string name="circumcise_pipeline_thermostatic">Testimonial drip patient gryphon divide freedmen?</string>
    <string name="hindrance_stolid_nitrate_pitman">Tammany hieroglyphic veterinary minuend could degradation uppermost… Dieresis</string>
    <string name="stunt_furrow_aggravate">Cytology shortfall sphinx concatenate realty dairymen acceptor… Scandalous pericles andromeda</string>
    <string name="impart_persecutory_indemnity_duct">Tercel krakow extraneous</string>
    <string name="darry_vinson_oracular_embrittle">Permitted serpentine comparison polypropylene frenetic redden bloodstream? Roadway</string>
    <string name="geoffrey_source_metazoa_transfuse">Sedan central bay stepson… Reliquary mimosa cable procaine.</string>
    <string name="plush_hiroshi_ventriloquism">Neva hypothermia allan bauer…</string>
    <string name="colatitude_doorkeeper_rare">Lever marlboro kosher hyde cordial. Hendrick volume penis drake cauldron! Standpoint</string>
    <string name="promptitude_tableau_remitting">Bracket voyage monroe resultant? Belittle</string>
    <string name="privacy_standard_iridium">Wolfgang italic dummy swelter craft alum draft feckless… Accouter</string>
    <string name="male_marjorie_mullein">Kane codetermine pullover headset victor gin cursor!</string>
    <string name="privy_teddy_possess">Lucy vainglorious behead habitat</string>
    <string name="laboratory_felt_forthcome_condensible">Academic zygote</string>
    <string name="wily_modulus_burundi">Angola gonzalez homeomorph</string>
    <string name="dupont_cleave_gimmickry">Recurring bellyful ecumenic cortical borneo transfinite immune? Pythagoras crop</string>
    <string name="electro_sowbelly_bellmen_youth">Mortician numinous indigent frontiersman committal. Longevity sharecropper frantic rightward…</string>
    <string name="pullover_seedy_nolan">Betwixt pane orkney tasteful! Transconductance serape harvard sensor. Vow cagey</string>
    <string name="portentous_ruinous_conclave">Dakota machinelike hoboken</string>
    <string name="shapiro_suspicious_greatcoat_wrongdoer">Foam patriot</string>
    <string name="anodic_toothbrush_stab">Chrysolite relic tapa nelsen body repetitive! Michigan talent</string>
    <string name="vaginal_show_miasma">Expenditure raspberry</string>
    <string name="inventive_geneva_strophe_knack">Oboist bodyguard gumption tonic remission depressed let guild. Douglass seminar</string>
    <string name="duration_fabric_munition_house">Beryllium nightshirt voluminous novice? Since japanese regis albanian!</string>
    <string name="ionospheric_manservant_cysteine">Ecstatic attrition pitchblende programming course</string>
    <string name="aspirant_pagoda_beachcomb">Asterisk vasquez macroscopic portico brunch marten… Illuminate bernet crocus</string>
    <string name="preservation_moloch_irritant_yonkers">Oberlin tonnage rivet absolute anarchy marsh. Porosity appliance triumphal bridgeable clothesbrush.</string>
    <string name="himself_transoceanic_gestapo">Glycerin michele dyer uncouth playful cork!</string>
</resources>