<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="account_general"
        app:title="@string/account_section_header_general">

        <Preference
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:key="account_id"
            app:summary="@string/account_action_tap_to_show"
            app:title="@string/account_label_id" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="account_subscription"
        app:title="@string/account_section_header_subscription">

        <Preference
            app:enabled="false"
            app:key="account_subscription_type"
            app:summary="Libre"
            app:title="@string/account_label_type" />

        <Preference
            app:enabled="false"
            app:key="account_subscription_active"
            app:summary="@string/account_active_forever"
            app:title="@string/account_label_active_until" />

        <Preference
            android:fragment="ui.web.WebFragment"
            app:icon="@drawable/ic_baseline_credit_card_24"
            app:key="account_subscription_manage"
            app:title="@string/account_action_manage_subscription" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="account_help"
        app:title="@string/universal_label_help">

        <Preference
            android:fragment="ui.web.WebFragment"
            app:icon="@drawable/ic_baseline_help_outline_24"
            app:key="account_help_why"
            app:title="@string/account_action_why_upgrade" />

    </PreferenceCategory>

</PreferenceScreen>