<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center" android:id="@+id/interdictCounterrevolutionaryLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/officialdomPetersburgView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView android:background="@color/tara_sonny_intuition" android:hint="@string/colatitude_doorkeeper_rare" android:id="@+id/augustanHygroscopicView" android:layout_height="wrap_content" android:layout_margin="22dp" android:layout_width="wrap_content" android:text="@string/aspirant_pagoda_beachcomb" android:textColor="@color/gypsum_gypping"/>
        <CheckBox android:background="@color/minibike_crete" android:hint="@string/barbarian_hamming_junta_acidic" android:id="@+id/neverthelessHimalayaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/shapiro_suspicious_greatcoat_wrongdoer" android:textColor="@color/whatnot_defy_dyspeptic" android:textSize="@dimen/homebuilder_hadley_textsize"/>
        <AutoCompleteTextView android:background="#950FA9EF" android:hint="@string/ionospheric_manservant_cysteine" android:id="@+id/airlineClarkView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/dream_snare_height" android:text="@string/wily_modulus_burundi" android:textColor="@color/traversable_hereford" android:textSize="@dimen/torsion_placenta_textsize"/>
        <AutoCompleteTextView android:background="#9D031B" android:hint="@string/kowloon_swastika_dysentery_quadric" android:id="@+id/hesperusAbelsonView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/ultrasonic_vouchsafe_size" android:layout_marginEnd="@dimen/wreckage_oaken_width" android:layout_marginStart="@dimen/arianism_neoclassic" android:layout_width="wrap_content" android:text="@string/groove_hindustan_quaternary" android:textColor="@color/germicide_abominable"/>
        <CheckedTextView android:background="@color/archery_matriarch" android:hint="@string/faber_preston_skippy_abigail" android:id="@+id/sordidOakleyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/pipe_erasure_exhaust" android:textColor="@color/gunning_dodson_benny"/>
        <AutoCompleteTextView android:background="@color/plagued_misanthrope" android:hint="@string/anodic_toothbrush_stab" android:id="@+id/hysteresisNameView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sympathy_servitor_leslie_inalterable" android:textColor="@color/emil_cliffhang_blanche" android:textSize="@dimen/goad_quirky_textsize"/>
        <Button android:hint="@string/gabrielle_composite_laban_cassette" android:id="@+id/boothShreddingView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/gentility_inclose_size" android:text="@string/plush_hiroshi_ventriloquism" android:textColor="@color/fanny_interviewee_visor"/>
        <TextView android:background="@color/yule_chimney_sandalwood" android:hint="@string/timber_airspeed_envenom" android:id="@+id/chewProseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/phalanger_hearse_inadmissible" android:textColor="@color/expectation_detect_wilkinson"/>
        <Button android:background="#B61BB2" android:hint="@string/devotion_diminish_proffer" android:id="@+id/irregularView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/probity_interpolatory_laos_clotting" android:textColor="@color/dowitcher_pension_protectorate"/>
        <AutoCompleteTextView android:hint="@string/impart_persecutory_indemnity_duct" android:id="@+id/zerothMathewsonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/darry_vinson_oracular_embrittle" android:textColor="#718187"/>
        <Button android:background="@color/triphammer_turvy" android:hint="@string/pullover_seedy_nolan" android:id="@+id/extremisBodhisattvaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/comprehend_imprint_opportune" android:textColor="@color/texaco_improvisate_precocity" android:textSize="24sp"/>
        <CheckedTextView android:background="@color/typo_devotee_philosophic" android:hint="@string/astound_umbrage_omelet" android:id="@+id/pentagonalAirflowView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/rufous_oases_width" android:text="@string/hindrance_stolid_nitrate_pitman" android:textColor="@color/implement_bellyache_inure"/>
        <AutoCompleteTextView android:background="#D468B1" android:hint="@string/netherlands_preparatory_stomach_togo" android:id="@+id/replenishView" android:layout_height="wrap_content" android:layout_margin="@dimen/omega_passivate_size" android:layout_width="wrap_content" android:text="@string/promptitude_tableau_remitting"/>
        <TextView android:background="@color/nominate_barrier_phenylalanine" android:hint="@string/iterate_schlitz_bloodbath" android:id="@+id/snakelikeWhelpView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/physiognomy_captivate_slaughter_tamarind" android:textColor="@color/preferential_snuffer"/>
    </LinearLayout>
    <Button android:background="@color/cardiod_octahedron_downing" android:hint="@string/loan_revisable_pictorial" android:id="@+id/officialdomPetersburgView" android:layout_height="wrap_content" android:layout_margin="26dp" android:layout_width="@dimen/february_togo_margin" android:paddingBottom="@dimen/sixteen_forcible_margin" android:paddingEnd="28dp" android:paddingStart="@dimen/rufous_oases_width" android:text="@string/devolution_passionate_solidus" app:layout_constraintBottom_toTopOf="@id/plenaryView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/interdictCounterrevolutionaryLayout"/>
    <Button android:background="@color/tundra_stimuli_loire" android:hint="@string/inferential_psychic_profusion_foal" android:id="@+id/plenaryView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/dupont_cleave_gimmickry" android:textColor="@color/haughty_gamble" android:textSize="@dimen/glom_furtive_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/officialdomPetersburgView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
