<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <CheckBox android:background="@color/plagued_misanthrope" android:hint="@string/visible_coil_influence_propyl" android:id="@+id/baneberryView" android:layout_height="wrap_content" android:layout_width="@dimen/ascend_labium_width" android:text="@string/corset_backwash_wobble_title" android:textColor="#A6C7AA7D" app:layout_constraintBottom_toTopOf="@id/atoneWhittakerView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <EditText android:background="@color/effectuate_waitress_segment" android:hint="@string/delve_loretta_airplane_worst" android:id="@+id/atoneWhittakerView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/haitian_spongy_width" android:paddingEnd="@dimen/voluptuous_revert_padding" android:paddingStart="@dimen/puppyish_engage_height" android:text="@string/preservation_moloch_irritant_yonkers" android:textColor="@color/successive_despoil" app:layout_constraintBottom_toTopOf="@id/evergreenMeshView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/baneberryView"/>
    <Button android:background="@color/snobbish_lindbergh" android:hint="@string/proximal_blackmail_mail_pinscher" android:id="@+id/evergreenMeshView" android:layout_height="wrap_content" android:layout_margin="@dimen/comptroller_petal_padding" android:layout_width="wrap_content" android:text="@string/quadripartite_spiro_rehearse_comrade" android:textColor="@color/spatterdock_veneer" app:layout_constraintBottom_toTopOf="@id/sowbellyLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/atoneWhittakerView"/>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/sowbellyLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/wysiwygView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/evergreenMeshView">
        <Button android:background="@color/gesture_rasmussen" android:hint="@string/momentum_remark_cancellate_intangible" android:id="@+id/pinpointSkywaveView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/privacy_standard_iridium" android:textColor="@color/digest_prescribe_blandish"/>
        <AutoCompleteTextView android:background="@color/condense_headwind_meridional" android:hint="@string/tapir_octopus_iverson" android:id="@+id/slimeNotionView" android:layout_height="match_parent" android:layout_margin="@dimen/schmidt_sourwood_size" android:layout_width="wrap_content" android:text="@string/geoffrey_source_metazoa_transfuse" android:textSize="@dimen/hallucinatory_tundra_textsize"/>
        <TextView android:background="@color/ipecac_lemonade_curiosity" android:hint="@string/vaginal_show_miasma" android:id="@+id/coeditorView" android:layout_height="wrap_content" android:layout_margin="@dimen/poole_liqueur_padding" android:layout_width="wrap_content" android:text="@string/circumcise_pipeline_thermostatic" android:textColor="@color/implement_bellyache_inure"/>
        <EditText android:background="#D3CC8B1F" android:hint="@string/lawyer_groggy_thug" android:id="@+id/oppressiveEspousalView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/push_barre_foal_crossarm" android:textColor="#8FD8A8" android:textSize="@dimen/epilepsy_gurgle_textsize"/>
        <AutoCompleteTextView android:hint="@string/martyrdom_decompose_vance_bronchial" android:id="@+id/platitudeMcleodView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/algal_anhydrite" android:layout_width="wrap_content" android:text="@string/theologian_open_parka_bail" android:textColor="@color/list_humid_sensible"/>
        <EditText android:background="@color/nash_maurice" android:hint="@string/inventive_geneva_strophe_knack" android:id="@+id/scourView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/privy_teddy_possess" android:textColor="@color/bentley_cartography_hubby"/>
        <TextView android:background="@color/mabel_interception" android:hint="@string/fallible_electronic_lindquist_axle" android:id="@+id/densitometerView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="20dp" android:text="@string/laboratory_felt_forthcome_condensible" android:textColor="@color/kingpin_snap_algenib"/>
        <EditText android:background="#40DE3C" android:hint="@string/portentous_ruinous_conclave" android:id="@+id/elseTelemetricView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/guignol_rerouting_feedback_infight" android:textColor="@color/sick_pitt_seed" android:textSize="24sp"/>
        <CheckBox android:background="@color/dumpty_munificent_gallinule" android:hint="@string/stayed_littermate_victorian_shameful" android:id="@+id/semiramisView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/himself_transoceanic_gestapo"/>
        <AutoCompleteTextView android:background="@color/triumph_ignite_immodest" android:hint="@string/close_binge_shakespearean_mira" android:id="@+id/mottleSerendipitousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/umber_sinai_perspicous" android:textColor="@color/vincent_dialup_solution" android:textSize="@dimen/cavil_novak_textsize"/>
    </LinearLayout>
    <CheckBox android:hint="@string/drosophila_scorpio_four_sanctuary" android:id="@+id/wysiwygView" android:layout_height="wrap_content" android:layout_width="@dimen/profusion_hollandaise_width" android:text="@string/vaughn_coffeecup_anodic_dowling" android:textColor="@color/truly_backlog_cull" android:textSize="@dimen/cheater_hummel_textsize" app:layout_constraintBottom_toTopOf="@id/concludeNecklineLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sowbellyLayout"/>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/concludeNecklineLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="horizontal" android:padding="@dimen/inner_newline_padding" app:layout_constraintBottom_toTopOf="@id/preferenceView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/wysiwygView">
        <CheckBox android:background="@color/mogadiscio_woebegone" android:hint="@string/sedition_somehow_portland" android:id="@+id/clapboardHanoverView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/aerate_midwife_greenbriar_caroline" android:textColor="#1C3D61" android:textSize="14sp"/>
        <Button android:background="@color/prolegomena_aarhus_entire" android:hint="@string/conversion_reprieve_synoptic" android:id="@+id/anywayView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/pixel_marvelous_heart" android:textColor="@color/sears_presentational_teleprompter"/>
        <CheckedTextView android:background="@color/heathkit_popping" android:hint="@string/carson_yardage_snigger_college" android:id="@+id/airlineClarkView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/electro_sowbelly_bellmen_youth" android:textColor="@color/calla_necktie_crane" android:textSize="@dimen/fundamental_transparent_textsize"/>
        <CheckedTextView android:background="@color/compress_equinox_turkish" android:hint="@string/breakage_weinstein_empty_apocalyptic" android:id="@+id/rhizomeDrummondView" android:layout_height="wrap_content" android:layout_margin="14dp" android:layout_width="wrap_content" android:text="@string/duration_fabric_munition_house"/>
        <AutoCompleteTextView android:background="@color/bugging_weldon_spinster" android:hint="@string/gunky_prostitute_veranda" android:id="@+id/northropView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/mailbox_layoff_galt_renown" android:textColor="@color/girdle_seizure_bonnie" android:textSize="@dimen/morsel_edible_textsize"/>
        <CheckBox android:background="@color/solomon_pinto" android:hint="@string/headroom_kind_chiang" android:id="@+id/southamptonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/summertime_cataract_height" android:paddingBottom="@dimen/counterexample_officialdom_height" android:paddingEnd="@dimen/bishop_hunk_margin" android:paddingStart="@dimen/lena_alien_margin" android:text="@string/male_marjorie_mullein" android:textColor="@color/handcuff_bleed_cabaret"/>
    </LinearLayout>
    <CheckedTextView android:hint="@string/waylaid_brenda_newline" android:id="@+id/preferenceView" android:layout_height="wrap_content" android:layout_width="0dp" android:padding="@dimen/glimmer_gestation_padding" android:text="@string/stunt_furrow_aggravate" android:textColor="@color/mooch_travertine" app:layout_constraintBottom_toTopOf="@id/gestaltView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/concludeNecklineLayout"/>
    <Button android:background="@color/potomac_tradition" android:hint="@string/astound_umbrage_omelet" android:id="@+id/gestaltView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/footmen_occupy_width" android:layout_width="match_parent" android:text="@string/attire_annex_pyrolyse" android:textColor="#9F4E82" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/preferenceView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
