<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="encryption_dns_category"
        app:title="@string/account_encrypt_label_dns">

        <Preference
            app:enabled="false"
            app:key="encryption_dns_description"
            app:summary="@string/account_encrypt_header_explanation"
            app:title="" />

        <ListPreference
            app:key="encryption_dns"
            app:title="@string/account_encrypt_label_dns"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="encryption_blockadns"
            app:enabled="false"
            app:isPreferenceVisible="false"
            app:title="@string/account_encrypt_label_use_blocka_dns"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="encryption_help"
        app:title="@string/universal_label_help">

        <Preference
            android:fragment="ui.web.WebFragment"
            app:icon="@drawable/ic_baseline_help_outline_24"
            app:key="encryption_help_dns"
            app:title="@string/account_encrypt_action_what_is_dns" />

        <Preference
            android:fragment="ui.web.WebFragment"
            app:icon="@drawable/ic_baseline_help_outline_24"
            app:key="encryption_help_upgrade"
            app:title="@string/account_action_why_upgrade" />

    </PreferenceCategory>

</PreferenceScreen>